RESOLVED FIXED82967
Web Inspector: break on DOM node insertion only once per operation, not once per inserted node
https://bugs.webkit.org/show_bug.cgi?id=82967
Summary Web Inspector: break on DOM node insertion only once per operation, not once ...
Adam Klein
Reported 2012-04-02 16:22:12 PDT
Web Inspector: break on DOM node insertion only once per operation, not once per inserted node
Attachments
Patch (9.28 KB, patch)
2012-04-02 16:32 PDT, Adam Klein
no flags
Patch with test (13.21 KB, patch)
2012-04-04 11:27 PDT, Adam Klein
ojan: review+
Adam Klein
Comment 1 2012-04-02 16:32:35 PDT
Ojan Vafai
Comment 2 2012-04-02 16:53:16 PDT
Looks good to me. Leaving r? so the inspector folks have a chance to r-/r+.
Adam Klein
Comment 3 2012-04-02 16:55:31 PDT
(In reply to comment #2) > Looks good to me. Leaving r? so the inspector folks have a chance to r-/r+. Thanks. To inspector folks: I'd especially appreciate suggestions on a test.
Adam Klein
Comment 4 2012-04-04 09:28:27 PDT
Can someone from the inspector side take a look at this? It's blocking me for moving forward with the DOM refactoring in bug 82631.
Pavel Feldman
Comment 5 2012-04-04 09:55:16 PDT
Comment on attachment 135221 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=135221&action=review > Source/WebCore/ChangeLog:23 > + I tried to write a test for this in inspector/debugger/dom-breakpoints.html, Your change looks good. The way I would test it is I would use a snippet like: testNode.innerHTML = "<br><br>"; debugger; And would test that I stop on the innerHTML = line first, then I would click continue and check that I stopped on the next line.
Adam Klein
Comment 6 2012-04-04 10:36:45 PDT
(In reply to comment #5) > (From update of attachment 135221 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=135221&action=review > > > Source/WebCore/ChangeLog:23 > > + I tried to write a test for this in inspector/debugger/dom-breakpoints.html, > > Your change looks good. The way I would test it is I would use a snippet like: > > testNode.innerHTML = "<br><br>"; > debugger; > > And would test that I stop on the innerHTML = line first, then I would click continue and check that I stopped on the next line. That test manually works fine, but coming up with the right set of incantations around evaluateInPageWithoutTimeout, resumeExecution, and waitUntilPaused is leaving me mystified with test timeouts. Will try in a standalone test...
Adam Klein
Comment 7 2012-04-04 11:27:42 PDT
Created attachment 135639 [details] Patch with test
Ojan Vafai
Comment 8 2012-04-04 11:46:50 PDT
Comment on attachment 135639 [details] Patch with test Yay!
Pavel Feldman
Comment 9 2012-04-04 11:53:30 PDT
Comment on attachment 135639 [details] Patch with test Clearing cq+ while I am figuring out whether the test is actually right.
Pavel Feldman
Comment 10 2012-04-04 11:58:54 PDT
Comment on attachment 135639 [details] Patch with test View in context: https://bugs.webkit.org/attachment.cgi?id=135639&action=review False alarm, I think it is Ok. Thanks for fixing it, sorry for moving it back to the end of the cq! > LayoutTests/inspector/debugger/dom-breakpoints.html:55 > + debugger; Oh, ok, you need it because of the runAfterPendingDispatches used in waitUntilPausedAndDumpStack.
Adam Klein
Comment 11 2012-04-04 12:01:28 PDT
(In reply to comment #10) > (From update of attachment 135639 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=135639&action=review > > False alarm, I think it is Ok. Thanks for fixing it, sorry for moving it back to the end of the cq! > > > LayoutTests/inspector/debugger/dom-breakpoints.html:55 > > + debugger; > > Oh, ok, you need it because of the runAfterPendingDispatches used in waitUntilPausedAndDumpStack. Thanks for double-checking, I wasn't sure which thing in that helper was messing me up, but I could tell something was.
Adam Klein
Comment 12 2012-04-04 13:10:44 PDT
Note You need to log in before you can comment on or make changes to this bug.